[project]
name = "smarket"
version = "0.1.0"
description = "SMarket"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "taskiq>=0.11.20",
    "uvicorn>=0.38.0",
]
